Correct version mobile

--- a/src/scss/layout/_feelbetter.scss
+++ b/src/scss/layout/_feelbetter.scss
@@ -8,6 +8,7 @@
     background-color: $color-light-grey;
     text-align: center;
     color: $color-spruce;
+    width: 100%;
 
     @media all and (max-width: 900px){
     display: grid ;
