--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -3,7 +3,7 @@
     background-size: 200%;
     background-position: center;
     background-repeat: no-repeat;
-    width: 100%;
+    width: 100vw;
     height: 100vh; 
     display: flex;
     align-items: center;
