--- a/src/scss/layout/delivery.scss
+++ b/src/scss/layout/delivery.scss
@@ -1,8 +1,9 @@
 .delivery {
-    background-color: $color-orange;
+    background-color: #FF975A;
     color: $color-white;
     text-align: center;
     height: 352px;
+    width: 100vw;
 
 &__icon-truck {
     padding: 46px 0 10px;
