--- a/src/scss/layout/enjoy.scss
+++ b/src/scss/layout/enjoy.scss
@@ -6,6 +6,7 @@
     display: grid;
     grid-template-rows: 339px 304px;
     color: $color-spruce;
+    width: 100vw;
 }
 
 
